--- a/public/index.html
+++ b/public/index.html
@@ -39,5 +39,10 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/react-leaflet/2.8.0/react-leaflet.min.js"
+      integrity="sha512-7DHyACf9J4bd3JDBfC6F027+NczbYXzp82a85O69ZHtt+Os0iA+DUKN59CW00MhIofp4wclXCjX070IAQzm83g=="
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
